# Copyright (c) 2021-2023, NVIDIA CORPORATION.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel",
    "setuptools",
    "cython>=0.29,<0.30",
    "scikit-build>=0.13.1",
    "cmake>=3.23.1,!=3.25.0",
    "ninja",
    "numpy",
    # Hard pin the patch version used during the build.
    "pyarrow==10.0.1",
    "protoc-wheel",
    "rmm==23.4.*",
]
