# Copyright (c) 2021, NVIDIA CORPORATION.

[build-system]

requires = [
    "wheel",
    "setuptools",
]

[tool.black]
line-length = 79
target-version = ["py38"]
include = '\.py?$'
exclude = '''
/(
    thirdparty |
    \.eggs |
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''
