# Copyright (c) 2020-2023, NVIDIA CORPORATION.

[isort]
line_length=79
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
order_by_type=True
known_dask=
    dask
    distributed
    dask_cuda
known_rapids=
    rmm
    cudf
known_first_party=
    dask_cudf
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,DASK,RAPIDS,FIRSTPARTY,LOCALFOLDER
skip=
    thirdparty
    .eggs
    .git
    .hg
    .mypy_cache
    .tox
    .venv
    _build
    buck-out
    build
    dist

[options.entry_points]
dask.dataframe.backends =
    cudf = dask_cudf.backends:CudfBackendEntrypoint
